// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Accommodations Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 css-et7x9c-MuiTypography-root"
    >
      Accommodations
    </h4>
    <div
      className="css-noiw7-MuiStack-root"
      data-testid="AccommodationscardContainer"
    />
  </div>
</div>
`;

exports[`Dashboard Chat Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="css-d3ri6l-MuiStack-root"
    >
      <div
        className="messenger"
      >
        <div
          className="chatMenu"
        >
          <div
            className="chatMenuWrapper"
          >
            <h4
              className="chatMenuInput"
            >
               Barefoot Nomad Live Chat 
            </h4>
            <div
              className="conversation"
            >
              §
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="SmartToyOutlinedIcon"
                focusable="false"
                style={
                  Object {
                    "color": "#1d97a7",
                    "height": "50px",
                    "width": "50px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 9V7c0-1.1-.9-2-2-2h-3c0-1.66-1.34-3-3-3S9 3.34 9 5H6c-1.1 0-2 .9-2 2v2c-1.66 0-3 1.34-3 3s1.34 3 3 3v4c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-4c1.66 0 3-1.34 3-3s-1.34-3-3-3zm-2 10H6V7h12v12zm-9-6c-.83 0-1.5-.67-1.5-1.5S8.17 10 9 10s1.5.67 1.5 1.5S9.83 13 9 13zm7.5-1.5c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5zM8 15h8v2H8v-2z"
                />
              </svg>
              <span
                className="conversationName"
              >
                Ninjas Bot
              </span>
              <h4
                className="conversationName"
              >
                Welcome to the chat room!
              </h4>
              <span
                className="messageBottom"
              >
                2:21 pm
              </span>
            </div>
            <div
              style={
                Object {
                  "marginTop": "5rem",
                  "textAlign": "center",
                }
              }
            >
              <button
                className="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root makeStyles-join-7 css-1rwt2y5-MuiButtonBase-root-MuiButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-joinIcon-9 css-i4bv87-MuiSvgIcon-root"
                  data-testid="WifiCallingOutlinedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 15.51c-1.24 0-2.45-.2-3.57-.57-.1-.04-.21-.05-.31-.05-.26 0-.51.1-.71.29l-2.2 2.2c-2.83-1.45-5.15-3.76-6.59-6.59l2.2-2.2c.28-.28.36-.67.25-1.02C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.49c0-.55-.45-1-1-1zM5.03 5h1.5c.07.89.22 1.76.46 2.59l-1.2 1.2c-.41-1.2-.67-2.47-.76-3.79zM19 18.97c-1.32-.09-2.59-.35-3.8-.75l1.19-1.19c.85.24 1.72.39 2.6.45v1.49z"
                  />
                  <path
                    d="M22 4.95C21.79 4.78 19.67 3 16.5 3c-3.18 0-5.29 1.78-5.5 1.95L16.5 12 22 4.95z"
                  />
                </svg>
                JOIN ROOM
              </button>
            </div>
          </div>
        </div>
        <div
          className="chatBox"
        >
          <div
            className="chatBoxWrapper"
          >
            <div
              className="chatBoxTop"
            >
              <div
                className="message"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message own"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message own"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message own"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message own"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
              <div
                className="message"
              >
                <div
                  className="messageTop"
                >
                  <img
                    alt=""
                    className="messageImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <p
                    className="messageText"
                  >
                    Lorem ipsum dolor sit amet.
                  </p>
                </div>
                <div
                  className="messageBottom"
                >
                  1 hour ago
                </div>
              </div>
            </div>
            <div
              className="chatBoxBottom"
            >
              <form
                action="#"
                className="makeStyles-container-6"
                onReset={[Function]}
                onSubmit={[Function]}
              >
                <div
                  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10"
                  >
                    <div
                      className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <div
                        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        onClick={[Function]}
                      >
                        <input
                          aria-invalid={false}
                          autoFocus={false}
                          className="MuiInputBase-input MuiOutlinedInput-input"
                          disabled={false}
                          name="message"
                          onAnimationStart={[Function]}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Type a message..."
                          required={false}
                          type="text"
                        />
                        <fieldset
                          aria-hidden={true}
                          className="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                          style={
                            Object {
                              "paddingLeft": 8,
                            }
                          }
                        >
                          <legend
                            className="PrivateNotchedOutline-legend-6"
                            style={
                              Object {
                                "width": 0.01,
                              }
                            }
                          >
                            <span
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "&#8203;",
                                }
                              }
                            />
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                  <div
                    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
                  >
                    <button
                      className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      style={
                        Object {
                          "height": "3.4rem",
                          "width": "5rem",
                        }
                      }
                      tabIndex={0}
                      type="button"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        SEND
                      </span>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          className="chatOnline"
        >
          <div
            className="chatOnlineWrapper"
          >
            <h4
              className="chatMenuInput"
            >
               Online users 
            </h4>
            <div
              className="chatOnline"
            >
              <div
                className="chatOnlineFriend"
              >
                <div
                  className="chatOnlineImgContainer"
                >
                  <img
                    alt=""
                    className="chatOnlineImg"
                    src="http://www.goodmorningimagesdownload.com/wp-content/uploads/2021/07/Free-Whatsapp-Dp-Profile-Pics-images.png"
                  />
                  <div
                    className="chatOnlineBadge"
                  />
                </div>
                <span
                  className="chatOnlineName"
                >
                  John Doe
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthXl css-19r6kue-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 css-et7x9c-MuiTypography-root"
    >
      Hi, Welcome back
    </h4>
    <p
      className="MuiTypography-root MuiTypography-body1 css-17665zs-MuiTypography-root"
    >
      Dashboard View
    </p>
  </div>
</div>
`;
